# HACKATHON-2

PHASE-01/In-memory-Python-Console-App/: CLAUDE.md  README.md  pyproject.toml  temp_feature_desc.txt
PHASE-01/In-memory-Python-Console-App/history/prompts/001-todo-console-app/: 2-create-todo-console-app-spec.spec.prompt.md  3-create-impl-plan.plan.prompt.md  4-create-tasks.tasks.prompt.md  5-complete-implementation.tasks.prompt.md
PHASE-01/In-memory-Python-Console-App/history/prompts/constitution/: 1-amend-constitution.constitution.prompt.md
PHASE-01/In-memory-Python-Console-App/specs/001-todo-console-app/: plan.md  spec.md  tasks.md
PHASE-01/In-memory-Python-Console-App/specs/001-todo-console-app/checklists/: requirements.md
PHASE-01/In-memory-Python-Console-App/src/todo/: cli.py  main.py  models.py  storage.py
